# oatodify

./: .dockerignore  .env  .gitignore  .replit  AI_CONFIG.md  API_PARSER_SETUP.md  DOCKER_DEPLOYMENT.md  Dockerfile  OPENAI_CONFIG.md  PROJECT_ANALYSIS.md  README.md  app.py  celery_app.py  config.py  database.py  dify_api.md  docker-compose.yml  docker-entrypoint.sh  gitignore  init-db.sql  main.py  models.py  nginx.conf  pyproject.toml  replit.md  run_migration.py  test_api_parser.py
api/: routes.py
attached_assets/: Pasted--POST-datasets-dataset-id-document-create-by-file--1757991448071_1757991448073.txt  Pasted--oa-dify-1-oa-usr-bin-env-python3-coding-utf-1757986292347_1757986292348.txt
docs/: DAT_IMPORT_GUIDE.md  frontend_usage.md  manual_cleanup_api.md  version_management.md
services/: ai_analyzer.py  api_document_parser.py  dat_importer.py  decryption_service.py  dify_service.py  document_parser.py  file_filter.py  s3_service.py  system_monitor.py  version_manager.py
tasks/: document_processor.py
templates/: approval.py  dashboard.py  maintenance.py  settings.py
tests/: test_manual_cleanup_api.py  test_version_manager.py
utils/: api_config.py  file_utils.py
